kubernetes/clusters/kenobi/home/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mealie

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mealie.feldman.tech`)
      kind: Rule
      services:
        - name: mealie
          port: 80
  tls:
    secretName: mealie-feldman-tech-tls
---
# Nextcloud
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nextcloud.feldman.tech`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: nextcloud-feldman-tech-tls
